--- a/week1/day3/esercizio/css/stile.css
+++ b/week1/day3/esercizio/css/stile.css
@@ -2,6 +2,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/*  */
+
 header{
     text-align:center;
 }
@@ -20,7 +22,7 @@ header{
 }
 
 main{
-    width: 800px;  
+    width: 40%;  
     margin: 0 auto;
     text-align:center
 }
