--- a/week1/day4/esercizio/css/style.css
+++ b/week1/day4/esercizio/css/style.css
@@ -66,6 +66,12 @@ main{
     text-align:left;
 }
 
+code{
+    background-color:rgb(197, 197, 197) ;
+    border:1px solid grey;
+    border-radius:5px;
+}
+
 ul{
     list-style-type: disc;
     margin:20px;
