--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -26,6 +26,13 @@ h3{
     margin-bottom: -0.2em;
 }
 
+h4{
+    font-weight: 400;
+    font-size: 22px;
+    font-family: 'Outfit', sans-serif;
+    margin-bottom: 1em;
+}
+
 b {
     font-size: 12px;
 }
@@ -47,6 +54,12 @@ li {
     margin:10px 0;
 }
 
+svg {
+    margin: 10px;
+    opacity: 0.2;
+    margin-bottom:3em ;
+}
+
 input[type="checkbox"] {
     outline: 1px solid white;
     margin-right: 2em;
@@ -65,8 +78,8 @@ input[type="checkbox"] {
 }
 
 .bottoneRisposta {
-    width:30%;
-    height: 60px;
+    width:40%;
+    height: 80px;
     border-radius: 50px;
     margin:1em 1.5em;
     background-color: #8080802e;
@@ -75,6 +88,10 @@ input[type="checkbox"] {
     color:white;
     font-size: 16px;
     cursor: pointer;
+}
+
+.bottoneRisposta:hover{
+    background-color:#d20094;
 }
 
 .upperCase{
@@ -117,3 +134,17 @@ footer {
     float: right;
     color: white;
 }
+
+#comment {
+    border:none;
+    border-bottom: 2px solid #d20094;
+    margin-bottom: 3em;
+    background-color: transparent;
+    width: 65%;
+    font-size: 20px;
+    padding-left: 2em;
+    padding-bottom: 0.5em;
+    color: white;
+    outline: none;
+}
+
