--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -69,7 +69,7 @@ input[type="checkbox"] {
 
 .condizioni {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -114,6 +114,22 @@ input[type="checkbox"] {
     width: 200px;
     height: 200px;
     padding: 30px;
+    position: relative;
+    right: 8px;
+}
+
+.rateUs {
+    text-transform: uppercase;
+    border:2px solid white;
+    background-color: transparent;
+    padding:1em 3em;
+    margin-top: 3em;
+    width: 200px;
+}
+.rateUs a{
+    text-decoration: none;
+    color:white;
+    font-size: 20px;
 }
 
 #procedi {
