--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -119,14 +119,13 @@ input[type="checkbox"] {
 }
 
 .rateUs {
+    display: inline-block;
     text-transform: uppercase;
     border:2px solid white;
     background-color: transparent;
     padding:1em 3em;
     margin-top: 3em;
-    width: 200px;
-}
-.rateUs a{
+    width: 120px;
     text-decoration: none;
     color:white;
     font-size: 20px;
