--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -60,6 +60,10 @@ svg {
     margin-bottom:3em ;
 }
 
+.illuminaStelle {
+    opacity:1;
+}
+
 input[type="checkbox"] {
     outline: 1px solid white;
     margin-right: 2em;
@@ -69,7 +73,7 @@ input[type="checkbox"] {
 
 .condizioni {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -137,10 +141,6 @@ input[type="checkbox"] {
     padding:10px 40px;
     box-shadow: 0 0 16px 3px #00ffff;
     cursor: pointer;
-}
-
-#procedi a{    
-    text-decoration: none;
     color: black;
     font-weight: 700;
     font-size: 20px;
