--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -113,13 +113,23 @@ input[type="checkbox"] {
 
 .cerchio {
     border-radius: 50%;
-    border: 30px solid  #00ffff;
-    border-image: linear-gradient(tO right, #0ff, #0ff 77%, #d20094 77% )1;
-    width: 200px;
-    height: 200px;
-    padding: 30px;
+    background-image: conic-gradient(red 0deg, red 90deg, yellow 90deg, yellow 180deg, green 180deg, green 270deg, blue 270deg);
+    width: 400px;
+    height: 400px;
     position: relative;
     right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cerchioPiccolo{
+    box-sizing: border-box;
+    border-radius: 50%;
+    width: 320px;
+    height: 320px;
+    background-color: #0C113B;
+    padding-top: 4em;
 }
 
 .rateUs {
@@ -135,6 +145,10 @@ input[type="checkbox"] {
     font-size: 20px;
 }
 
+.risposte{
+    margin-top: 7em;
+}
+
 #procedi {
     border:none;
     background-color: #00ffff;
@@ -148,20 +162,43 @@ input[type="checkbox"] {
 
 #container{
     color:white;
-    margin-top: 4em;
+    margin-top: 15vh;
 }
 
 footer {
-    margin-top: 3em;
     display: flex;
     justify-content: center;
     height: 300px;
     align-items:end;
+    margin-top: -6em;
 }
 
 #timer {
     float: right;
     color: white;
+    border-radius: 50%;
+    box-sizing: border-box;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -2.5em;
+}
+
+#timerPiccolo {
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    background-color: #6F2971;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+#timer p {
+    margin:0;
 }
 
 #comment {
@@ -181,3 +218,5 @@ footer {
     margin-bottom: 2em;
     margin-top: -1.8em;
 }
+
+
