--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -192,7 +192,7 @@ footer {
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    background: radial-gradient(circle, rgba(101,36,104,1) 0%, rgba(12,17,59,1) 95%);
+    background: linear-gradient(115deg, rgba(12,17,59,1) 0%, rgba(101,36,104,1) 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
