--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -2,11 +2,11 @@
 
 body {
     background: rgb(12,17,59);
-background: linear-gradient(117deg, rgba(12,17,59,1) 0%, rgba(46,22,88,1) 54%, rgba(65,24,104,1) 61%, rgba(43,17,85,1) 65%, rgba(94,35,115,1) 70%, rgba(75,27,101,1) 76%, rgba(110,42,117,1) 79%, rgba(110,42,117,1) 83%, rgba(12,17,59,1) 100%);
-    background-size: cover;
+    background-image: linear-gradient(117deg, rgba(12,17,59,1) 0%, rgba(46,22,88,1) 54%, rgba(65,24,104,1) 61%, rgba(43,17,85,1) 65%, rgba(94,35,115,1) 70%, rgba(75,27,101,1) 76%, rgba(110,42,117,1) 79%, rgba(110,42,117,1) 83%, rgba(12,17,59,1) 100%);
+    background-size:cover;
+    background-attachment: fixed;
     padding:2em 5em;
     font-family: 'Inter', sans-serif;
-    height: 100vh;
 }
 
 h1{
@@ -62,11 +62,62 @@ svg {
     margin-bottom:3em ;
 }
 
+
+/* STILE CHECKBOX  */
 input[type="checkbox"] {
-    outline: 1px solid white;
-    margin-right: 2em;
+    cursor: pointer;
+    width: 0px;
+    height: 0px;
+    margin-right: 4em;
+    position: relative;
+    bottom: 10px;
+}
+
+input[type=checkbox]:checked:before {
+    content: "";
+display: block;
+width: 16px;
+height: 16px;
+border: 3px solid white;
+background-color: transparent;
+}
+
+input[type=checkbox]:before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 3px solid white;
+    border-radius: 3px;
     background-color: transparent;
 }
+
+input[type=checkbox]:after {
+    content: "";
+    display: block;
+    width: 0px;
+    height: 0px;
+    border: solid #FFCB9A;
+    border-width: 0 0px 0px 0;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  input[type=checkbox]:checked:after {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    position: relative;
+    bottom: 22px;
+    left: 3px;
+  }
+
 
 .illuminaStelle {
     opacity:1;
@@ -222,3 +273,36 @@ footer {
 }
 
 
+/* input[type=checkbox] {
+    position: absolute;
+    cursor: pointer;
+    width: 0px;
+    height: 0px;
+  }
+  
+  input[type=checkbox]:checked:before {
+        content: "";
+    display: block;
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    border: 4px solid #FFCB9A;
+    border-radius: 20px;
+    background-color: #445768;  
+    transition: all 0.2s linear;
+  }
+  
+  
+  input[type=checkbox]:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 34px;
+    height: 34px;
+    border: 4px solid #FFCB9A;
+    border-radius: 3px;
+    background-color: #445768;
+  }
+   */
+  
+  
