--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -92,23 +92,12 @@ input[type=checkbox]:before {
     background-color: transparent;
 }
 
-input[type=checkbox]:after {
-    content: "";
-    display: block;
-    width: 0px;
-    height: 0px;
-    border: solid #FFCB9A;
-    border-width: 0 0px 0px 0;
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
   input[type=checkbox]:checked:after {
     content: "";
     display: block;
     width: 10px;
     height: 10px;
-    border: solid white;
+    border: solid #d20094;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
@@ -273,36 +262,49 @@ footer {
 }
 
 
-/* input[type=checkbox] {
-    position: absolute;
+/* stile radio button */
+input[type="radio"] {
     cursor: pointer;
     width: 0px;
     height: 0px;
-  }
-  
-  input[type=checkbox]:checked:before {
-        content: "";
-    display: block;
-    position: absolute;
-    width: 34px;
-    height: 34px;
-    border: 4px solid #FFCB9A;
-    border-radius: 20px;
-    background-color: #445768;  
-    transition: all 0.2s linear;
-  }
-  
-  
-  input[type=checkbox]:before {
+    margin-right: 4em;
+    position: relative;
+    bottom: 16px;
+    left: 16px;
+}
+
+input[type=radio]:checked:before {
+    content: "";
+display: block;
+width: 16px;
+height: 16px;
+border: 3px solid white;
+background-color: transparent;
+}
+
+input[type=radio]:before {
     content: "";
     display: block;
-    position: absolute;
-    width: 34px;
-    height: 34px;
-    border: 4px solid #FFCB9A;
-    border-radius: 3px;
-    background-color: #445768;
+    width: 16px;
+    height: 16px;
+    border: 3px solid white;
+    border-radius: 50px;
+    background-color: transparent;
+}
+
+  input[type=radio]:checked:after {
+    content: "";
+    display: block;
+    width: 8px;
+    height: 8px;
+    border: solid #d20094;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    position: relative;
+    bottom: 19px;
+    left: 5px;
   }
-   */
-  
+
   
