--- a/week4 buildwek1/assets/css/style.css
+++ b/week4 buildwek1/assets/css/style.css
@@ -191,6 +191,29 @@ input[type=checkbox]:before {
     margin-top: 7em;
 }
 
+.divRiepilogo{
+    text-align: left;
+    margin-top:5em;
+}
+.divRiepilogo h3 {
+    margin-bottom: 2em;
+    color:#d20094;
+}
+.divRiepilogo hr{
+    border-color:#d20094
+}
+.divRiepilogo a{
+    text-decoration: none;
+    font-size: 20px;
+    color:#00ffff;
+    border:3px solid #00ffff;
+    padding:10px;
+}
+.divRiepilogo div{
+    display: flex;
+    justify-content: space-around;
+}
+
 #procedi {
     border:none;
     background-color: #00ffff;
