--- a/memory/prova/style.css
+++ b/memory/prova/style.css
@@ -1,5 +1,9 @@
 /* #2773E6  blu */
 /* #A419DD viola */
+* {
+    font-family: 'Lexend', sans-serif;
+}
+
 body {
     text-align: center;
     background-color: grey;
@@ -25,11 +29,31 @@ button:hover{
     background-color:#16486C ;
 }
 
-.caselle {
+.casella {
     display: inline-block;
-    margin: 1em;
+    margin: 20px;
     background-color: #A419DD;
     border-radius: 5px;
     width: 120px;
     height: 120px;
+    font-size: 70px;
+}
+
+#timer {
+    font-size: 20px;
+}
+
+.icona{
+    opacity: 0;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.scoperto {
+    opacity:1;
+}
+
+.giusti{
+    opacity: 1;
 }
