--- a/week5/day1/completo/assets/css/style.css
+++ b/week5/day1/completo/assets/css/style.css
@@ -1,18 +1,17 @@
 /* IMPOSTAZIONI GENERALI */
-html {
-  font-size: 62.5%;
-}
+
 body {
   font-family: Poppins, "Helvetica Neue", sans-serif;
-  font-size: 1.4rem;
-  line-height: 1.5;
+  line-height: 1.6;
   padding: 15px;
   background-image: url("../img/sfondo.png");
   background-position: center center;
 }
+
 * {
   box-sizing: border-box;
 }
+
 hr {
   display: none;
 } /* rimuove l'elemento */
@@ -23,20 +22,56 @@ header {
   background: linear-gradient(180deg, rgba(0, 160, 198, 1) 0%, rgba(3, 109, 134, 1) 68%);
   text-align: center;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: bold;
   color: white;
   box-shadow: 0 3px 3px #444;
   margin-bottom: 1.5em;
   padding: 2em 1.5em;
 }
-header div img {
-  margin-bottom: 20px;
+
+@media screen and (min-width: 800px) {
+  header {
+    padding: 1em;
+  }
 }
+
+@media screen and (max-width: 1199px) {
+  header .brand img {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  header {
+    text-align: left;
+  }
+  header .brand,
+  header nav,
+  header .brand p {
+    display: inline-block;
+  }
+
+  header .brand {
+    width: 75%;
+  }
+  header .brand img {
+    vertical-align: middle;
+  }
+  header .brand p {
+    margin-bottom: 0;
+  }
+}
+
 header nav ul {
   margin: 0;
 }
 header nav li {
   list-style: none;
+  display: inline-block;
+  margin-right: 10px;
+}
+header nav li:last-child {
+  margin-right: 0;
 }
 header nav li a {
   color: white;
@@ -48,10 +83,6 @@ header nav li a:hover {
 header nav li a::before {
   content: "\22c6\0020";
 }
-header li {
-  display: inline;
-  margin-right: 1em;
-}
 
 /* MAIN */
 main {
@@ -60,27 +91,39 @@ main {
   padding: 2em 1em;
   margin-bottom: 1.5em;
 }
+@media screen and (min-width: 700px) {
+  main {
+    padding: 2em;
+  }
+}
+
 section {
   background-color: #e3e3e3;
-  padding: 1em;
+  padding: 1.5em 1em;
   margin-bottom: 2em;
+  position: relative;
 }
+
 section h2 {
   text-align: center;
   color: #333;
-  font-size: 2rem;
+  font-size: 1.4rem;
+  margin-bottom: 1.7rem;
   font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 1em;
+  background-color: #a3a3a3;
+  padding: 0px 1em;
 }
 
 /* ELEMENTI NEL MAIN - ARTICLE */
+
 h1 {
-  font-size: 3.2rem;
+  font-size: 2.6rem;
+  line-height: 1.2;
   font-weight: bold;
   letter-spacing: -0.03em;
   margin-bottom: 0.7em;
 }
+
 p,
 address,
 ul,
@@ -89,15 +132,66 @@ dl,
 blockquote {
   margin-bottom: 1.2em;
 }
+
 h1 + p {
   color: #a0a0a0;
+}
+
+@media screen and (max-width: 499px) {
+  p,
+  ul,
+  ol {
+    font-size: 1.4rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  p,
+  ul,
+  ol {
+    font-size: 1.2rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  h1 {
+    font-size: 3.6rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    line-height: 2;
+  }
+  section {
+    border-radius: 20px;
+  }
+}
+
+.imgLeft {
+  margin-right: 20px;
+  border: 4px solid #00a0c6;
+  outline: 4px solid #a02571;
+  padding: 3px;
 }
 ul,
 ol {
   margin-left: 2em;
-  list-style-type: disc;
 }
-
 a {
   color: #00a0c6;
   font-weight: bold;
@@ -118,13 +212,37 @@ iframe {
   border-radius: 20px;
 }
 
-/* TABELLE */
-article {
-  text-align: left; /* ///////////////////// */
+@media screen and (min-width: 1200px) {
+  iframe,
+  section {
+    display: inline-block;
+    width: 50%;
+    margin-inline: -2px;
+    vertical-align: middle;
+  }
+
+  iframe {
+    height: 267px;
+  }
 }
+
+/* TABELLE */
 table {
   margin-bottom: 2em;
 }
+@media screen and (min-width: 500px) {
+  table {
+    margin: 0 auto 2em;
+  }
+}
+@media screen and (min-width: 700px) {
+  table {
+    width: 70%;
+    margin-block-start: 5rem;
+    margin-block-end: 6rem;
+  }
+}
+
 caption {
   font-weight: bold;
   font-style: italic;
@@ -164,6 +282,20 @@ button {
   color: white;
   font-weight: bold;
 }
+@media screen and (min-width: 500px) {
+  input {
+    display: inline-block;
+    width: 70%;
+  }
+}
+@media screen and (min-width: 700px) {
+  input {
+    padding: 15px;
+  }
+  button {
+    padding: 15px 30px;
+  }
+}
 
 /* ELEMENTI NELL' ASIDE */
 aside h2 {
@@ -179,6 +311,14 @@ aside div {
   border: 1px solid #c3c3c3;
   margin-bottom: 1em;
   padding: 1em;
+}
+
+@media screen and (min-width: 1200px) {
+  aside div {
+    display: inline-block;
+    width: 33.333%;
+    margin-inline: -2px;
+  }
 }
 aside div p:last-child {
   margin-bottom: 0;
@@ -196,113 +336,53 @@ footer {
   text-align: center;
   font-size: 1.2rem;
 }
+
+@media screen and (min-width: 800px) {
+  footer {
+    padding: 1em 12em;
+  }
+}
+
 footer a {
   color: fuchsia;
 }
 
-@media screen and (min-width: 576px) {
-  h1 {
-    font-size: 48px;
-  }
-  p {
-    font-size: 1.6rem;
-  }
-  table {
-    margin-inline: auto;
-  }
-  section {
-    padding: 1.5em;
-  }
-  section h2 {
-    background-color: #a3a3a3;
-    text-transform: initial;
-  }
-  input {
-    padding: 10px;
-    width: 60%;
-  }
-  button {
-    padding: 10px 30px;
-  }
-  footer address {
-    font-size: 1.4rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  header {
-    text-align: left;
-    padding: 10px;
-  }
-
-  header div {
-    display: inline-block;
-    margin-left: 0;
-  }
-  header div img {
-    max-height: 50px;
-    vertical-align: middle;
-    margin-bottom: 0;
-    margin-left: 0;
-  }
-  header div p {
-    display: inline-block;
-    vertical-align: middle;
-    margin-bottom: 0;
-    font-size: 12px;
-  }
-  header nav {
-    display: inline-block;
-    font-size: 12px;
-    margin-inline-start: 5em;
-  }
-
-  table {
-    width: 70%;
-  }
-  section,
-  iframe {
-    display: inline-block;
-    width: 49%;
-    height: 200px;
-    vertical-align: middle;
-  }
-
-  aside {
-    text-align: center;
-    font-size: 0; /* per eliminare gli spazi tra i 3 div */
-  }
-  aside div {
-    text-align: left;
-    display: inline-block;
-    width: 32%;
-    vertical-align: middle;
-    font-size: 12px;
-  }
-
-  aside div p {
-    font-size: 14px;
-  }
-  aside div a {
-    font-weight: 400;
+@media screen and (min-width: 1200px) {
+  header,
+  main,
+  footer {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @media print {
-  header img,
+  body {
+    font-size: 24px;
+    padding: 0;
+    background-image: none;
+  }
+  main {
+    box-shadow: none;
+    margin: 0;
+  }
+  thead tr {
+    background-color: #d3d3d3;
+    color: black;
+  }
+  thead tr,
+  tbody tr {
+    border-bottom: 1px solid #666;
+  }
+
   header,
-  section,
+  article section,
   iframe,
   aside,
-  footer {
+  footer,
+  .social,
+  .toTop {
     display: none;
-  }
-  h1 {
-    font-size: 34px;
-  }
-  p,
-  ul,
-  li {
-    font-size: 22px;
   }
 }
