--- a/week5/day2/pratica/assets/css/style.css
+++ b/week5/day2/pratica/assets/css/style.css
@@ -28,6 +28,9 @@ header {
   box-shadow: 0 3px 3px #444;
   margin-bottom: 1.5em;
   padding: 2em 1.5em;
+  position: sticky;
+  top: 0;
+  z-index: 99;
 }
 header div img {
   margin-bottom: 20px;
@@ -81,6 +84,18 @@ h1 {
   letter-spacing: -0.03em;
   margin-bottom: 0.7em;
 }
+h1 {
+  position: relative;
+}
+.underline {
+  display: block;
+  position: absolute;
+  top: 90px;
+  right: 10px;
+  left: 0;
+  overflow: hidden;
+  opacity: 0.5;
+}
 p,
 address,
 ul,
@@ -96,6 +111,14 @@ ul,
 ol {
   margin-left: 2em;
   list-style-type: disc;
+}
+article img {
+  float: left;
+  margin-right: 10px;
+}
+/* per far si che il testo venga formattato bene sotto all'immagine */
+.flow-root {
+  display: flow-root;
 }
 
 a {
@@ -152,6 +175,19 @@ tbody tr:last-of-type {
 }
 
 /* FORM */
+section {
+  position: relative;
+  border-radius: 20px;
+}
+section h2 {
+  background-color: #a3a3a3;
+  position: absolute;
+  top: -15px;
+  left: 25px;
+  padding: 0 20px;
+  box-shadow: 1px 1px 1px black;
+  text-transform: uppercase;
+}
 input {
   padding: 5px;
   border: 0;
@@ -179,6 +215,14 @@ aside div {
   border: 1px solid #c3c3c3;
   margin-bottom: 1em;
   padding: 1em;
+  position: relative; /* per mettere l'icona in position absolite su ogni div */
+}
+.fa-tag {
+  position: absolute;
+  font-size: 48px;
+  opacity: 0.2;
+  top: 10px;
+  right: 10px;
 }
 aside div p:last-child {
   margin-bottom: 0;
@@ -200,6 +244,39 @@ footer a {
   color: fuchsia;
 }
 
+/* bottoni fossati */
+.fixed-btn {
+  background-color: rgba(182, 182, 182, 0.7);
+  padding: 0.5em;
+  padding-right: 2em;
+  font-size: 24px;
+  border: 2px solid rgb(223, 223, 223);
+  border-radius: 10px;
+  position: fixed;
+  width: 30px;
+  right: -10px;
+  cursor: pointer;
+  z-index: 10000000000;
+}
+.fixed-btn:hover {
+  background-color: rgb(223, 223, 223);
+}
+#up {
+  bottom: 10px;
+  color: red;
+}
+/* #up a {
+  color: RED;
+} */
+#calendar {
+  bottom: 80px;
+  color: blue;
+}
+#social {
+  bottom: 150px;
+  color: blue;
+}
+
 @media screen and (min-width: 576px) {
   h1 {
     font-size: 48px;
@@ -213,10 +290,7 @@ footer a {
   section {
     padding: 1.5em;
   }
-  section h2 {
-    background-color: #a3a3a3;
-    text-transform: initial;
-  }
+
   input {
     padding: 10px;
     width: 60%;
@@ -226,6 +300,21 @@ footer a {
   }
   footer address {
     font-size: 1.4rem;
+  }
+  .underline {
+    position: absolute;
+    top: 130px;
+    left: 0;
+  }
+}
+@media screen and (min-width: 700px) {
+  #calendar {
+    bottom: unset;
+    top: 80px;
+  }
+  #social {
+    bottom: unset;
+    top: 10px;
   }
 }
 
@@ -285,6 +374,12 @@ footer a {
   }
   aside div a {
     font-weight: 400;
+  }
+  .underline {
+    position: absolute;
+    top: 55px;
+    left: 400px;
+    right: auto;
   }
 }
 
